Commit com as organizações finais

--- a/equipe.html
+++ b/equipe.html
@@ -64,7 +64,7 @@
             <div class="social_media_container bd-grid_social_media">
                 <div class="social_media_data">
                     <span class="section-subtitle social_media_initial">Nossos amigos!</span>
-                    <h2 class="section-title social_media_initial">Uma seção descontraida, conheça nossos pets!</h2>
+                    <h2 class="section-title social_media_initial">Uma seção descontraida. Conheça nossos pets!</h2>
                     <p class="social_media_description">
                         Aqui vamos apresentar o motivo de termos o nosso petshop, os nossos melhores amigos. Graças a
                         eles, aprendemos como tratar de animais
@@ -173,7 +173,7 @@
         <footer class="footer section bd-container text_align_center_div">
             <div class="footer_container bd-grid">
                 <div class="footer_content">
-                    <a href="#" class="footer_logo">Contate-nos abaixo</a>
+                    <span class="footer_logo">Contate-nos abaixo</span>
                     <div>
                         <a href="https://wa.link/6wdqu3" target="_blank" class="footer_social"><i
                                 class="bx bxl-whatsapp"></i></a>
