--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <footer class="footer section bd-container text_align_center_div">
       <div class="footer_container bd-grid">
         <div class="footer_content">
-          <a href="#" class="footer_logo">Contate-nos abaixo</a>
+          <span class="footer_logo">Contate-nos abaixo</span>
           <div>
             <a href="https://wa.link/6wdqu3" target="_blank" class="footer_social"><i class="bx bxl-whatsapp"></i></a>
             <a href="https://www.instagram.com/belezacasadocriador" target="_blank" class="footer_social"><i
